fix share button layout on mobile view

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -477,6 +477,14 @@ img.size-full {
     border: transparent !important;
 }
 
+.post-meta-button-share {
+    max-width: 150px;
+
+    @media screen and ( min-width: 576px ) {
+        max-width: none;
+    }
+}
+
 /* HTML: <div class="loader"></div> */
 .loader {
     width: 30px;
